--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,39 +5,43 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇰🇷 韩国-188.5KB/s(Youtube:不良林), server: 3.36.93.113, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 🇯🇵 日本-180.4KB/s(Youtube:不良林), server: 52.253.119.192, port: 8313, type: ss, cipher: chacha20-ietf-poly1305, password: ljqdalu13..}
-  - {name: 🇺🇸 美国-258.9KB/s(Youtube:不良林), server: 20.24.227.29, port: 8313, type: ss, cipher: chacha20-ietf-poly1305, password: ljqdalu13..}
-  - {name: 🇳🇱 荷兰-204.1KB/s(Youtube:不良林), server: 213.183.59.206, port: 9037, type: ss, cipher: aes-256-cfb, password: TN2YqghxeFDKZfLU}
+  - {name: 🇺🇸 美国-375.9KB/s(Youtube:不良林), server: 20.24.227.29, port: 8313, type: ss, cipher: chacha20-ietf-poly1305, password: ljqdalu13..}
+  - {name: 🇨🇳 中国-311.2KB/s(Youtube:不良林), server: zzcm09.bdate.xyz, port: 1150, type: vmess, uuid: b9ecdb44-236b-30a7-94f2-f464993d84cf, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: zzcm09.bdate.xyz}}
+  - {name: 🇸🇬 新加坡-413.1KB/s(Youtube:不良林), server: sgggg.158801.xyz, port: 34002, type: trojan, password: 775ed92a-4c87-4111-a6cf-fc5e0ac18ae5, sni: sgggg.158801.xyz, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-2.17MB/s(Youtube:不良林), server: sgggg.158801.xyz, port: 34004, type: trojan, password: 1cb75a72-5c60-49bf-8640-a7f0374a47a5, sni: sgggg.158801.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-488.1KB/s(Youtube:不良林), server: 34.217.102.91, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-188.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-180.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-258.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-204.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-375.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-413.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-488.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇰🇷 韩国-188.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-180.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-258.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-204.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-375.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-413.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-488.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-188.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-180.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-258.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-204.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-375.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-413.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-488.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -48,29 +52,32 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇰🇷 韩国-188.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-180.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-258.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-204.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-375.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-413.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-488.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-188.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-180.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-258.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-204.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-375.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-413.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-488.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇰🇷 韩国-188.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-180.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-258.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-204.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-375.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-413.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-488.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -86,10 +93,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇰🇷 韩国-188.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-180.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-258.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-204.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-375.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-413.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-488.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
