--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,79 +5,81 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-375.9KB/s(Youtube:不良林), server: 20.24.227.29, port: 8313, type: ss, cipher: chacha20-ietf-poly1305, password: ljqdalu13..}
-  - {name: 🇨🇳 中国-311.2KB/s(Youtube:不良林), server: zzcm09.bdate.xyz, port: 1150, type: vmess, uuid: b9ecdb44-236b-30a7-94f2-f464993d84cf, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: zzcm09.bdate.xyz}}
-  - {name: 🇸🇬 新加坡-413.1KB/s(Youtube:不良林), server: sgggg.158801.xyz, port: 34002, type: trojan, password: 775ed92a-4c87-4111-a6cf-fc5e0ac18ae5, sni: sgggg.158801.xyz, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-2.17MB/s(Youtube:不良林), server: sgggg.158801.xyz, port: 34004, type: trojan, password: 1cb75a72-5c60-49bf-8640-a7f0374a47a5, sni: sgggg.158801.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-488.1KB/s(Youtube:不良林), server: 34.217.102.91, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇯🇵 日本-250.2KB/s(Youtube:不良林), server: 52.253.119.192, port: 8313, type: ss, cipher: chacha20-ietf-poly1305, password: ljqdalu13..}
+  - {name: 🇨🇳 台湾-1.50MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇰🇷 韩国-431.8KB/s(Youtube:不良林), server: 3.38.116.244, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇭🇰 香港-527.5KB/s(Youtube:不良林), server: 426hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 426hk.fans8.xyz}}
+  - {name: 🇨🇳 中国-1.06MB/s(Youtube:不良林), server: 521hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 521hk.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-375.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-413.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-488.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-250.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.50MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-431.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-527.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-375.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-413.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-488.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-250.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.50MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-431.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-527.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-375.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-413.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-488.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-250.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.50MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-431.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-527.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-1.50MB/s(Youtube:不良林)
+      - 🇭🇰 香港-527.5KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-375.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-413.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-488.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-250.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.50MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-431.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-527.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-375.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-413.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-488.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-250.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.50MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-431.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-527.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-375.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-413.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-488.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-250.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.50MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-431.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-527.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -93,11 +95,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-375.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-413.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-488.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-250.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.50MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-431.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-527.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
