--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,81 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-250.2KB/s(Youtube:不良林), server: 52.253.119.192, port: 8313, type: ss, cipher: chacha20-ietf-poly1305, password: ljqdalu13..}
-  - {name: 🇨🇳 台湾-1.50MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
   - {name: 🇰🇷 韩国-431.8KB/s(Youtube:不良林), server: 3.38.116.244, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 🇭🇰 香港-527.5KB/s(Youtube:不良林), server: 426hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 426hk.fans8.xyz}}
-  - {name: 🇨🇳 中国-1.06MB/s(Youtube:不良林), server: 521hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 521hk.fans8.xyz}}
+  - {name: 波兰-583.6KB/s(Youtube:不良林), server: 217.30.10.63, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
+  - {name: 🇺🇸 美国-352.4KB/s(Youtube:不良林), server: 20.24.227.29, port: 8313, type: ss, cipher: chacha20-ietf-poly1305, password: ljqdalu13..}
+  - {name: 波兰-419.5KB/s(Youtube:不良林), server: 217.30.10.63, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
+  - {name: 🇯🇵 日本-250.2KB/s(Youtube:不良林), server: 52.253.119.192, port: 8313, type: ss, cipher: chacha20-ietf-poly1305, password: ljqdalu13..}
+  - {name: 波兰-616.8KB/s(Youtube:不良林), server: 217.30.10.63, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
+  - {name: 波兰-475.8KB/s(Youtube:不良林), server: 217.30.10.63, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 波兰-414.3KB/s(Youtube:不良林), server: 217.30.10.64, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 乌克兰-881.4KB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
+  - {name: 🇰🇷 韩国-2.57MB/s(Youtube:不良林), server: 3.36.93.113, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-250.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.50MB/s(Youtube:不良林)
       - 🇰🇷 韩国-431.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-527.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 波兰-583.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-352.4KB/s(Youtube:不良林)
+      - 波兰-419.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-250.2KB/s(Youtube:不良林)
+      - 波兰-616.8KB/s(Youtube:不良林)
+      - 波兰-475.8KB/s(Youtube:不良林)
+      - 波兰-414.3KB/s(Youtube:不良林)
+      - 乌克兰-881.4KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.57MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-250.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.50MB/s(Youtube:不良林)
       - 🇰🇷 韩国-431.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-527.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 波兰-583.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-352.4KB/s(Youtube:不良林)
+      - 波兰-419.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-250.2KB/s(Youtube:不良林)
+      - 波兰-616.8KB/s(Youtube:不良林)
+      - 波兰-475.8KB/s(Youtube:不良林)
+      - 波兰-414.3KB/s(Youtube:不良林)
+      - 乌克兰-881.4KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.57MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-250.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.50MB/s(Youtube:不良林)
       - 🇰🇷 韩国-431.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-527.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 波兰-583.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-352.4KB/s(Youtube:不良林)
+      - 波兰-419.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-250.2KB/s(Youtube:不良林)
+      - 波兰-616.8KB/s(Youtube:不良林)
+      - 波兰-475.8KB/s(Youtube:不良林)
+      - 波兰-414.3KB/s(Youtube:不良林)
+      - 乌克兰-881.4KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.57MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-1.50MB/s(Youtube:不良林)
-      - 🇭🇰 香港-527.5KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-250.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.50MB/s(Youtube:不良林)
       - 🇰🇷 韩国-431.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-527.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 波兰-583.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-352.4KB/s(Youtube:不良林)
+      - 波兰-419.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-250.2KB/s(Youtube:不良林)
+      - 波兰-616.8KB/s(Youtube:不良林)
+      - 波兰-475.8KB/s(Youtube:不良林)
+      - 波兰-414.3KB/s(Youtube:不良林)
+      - 乌克兰-881.4KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.57MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-250.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.50MB/s(Youtube:不良林)
       - 🇰🇷 韩国-431.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-527.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 波兰-583.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-352.4KB/s(Youtube:不良林)
+      - 波兰-419.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-250.2KB/s(Youtube:不良林)
+      - 波兰-616.8KB/s(Youtube:不良林)
+      - 波兰-475.8KB/s(Youtube:不良林)
+      - 波兰-414.3KB/s(Youtube:不良林)
+      - 乌克兰-881.4KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.57MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-250.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.50MB/s(Youtube:不良林)
       - 🇰🇷 韩国-431.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-527.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 波兰-583.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-352.4KB/s(Youtube:不良林)
+      - 波兰-419.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-250.2KB/s(Youtube:不良林)
+      - 波兰-616.8KB/s(Youtube:不良林)
+      - 波兰-475.8KB/s(Youtube:不良林)
+      - 波兰-414.3KB/s(Youtube:不良林)
+      - 乌克兰-881.4KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.57MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -95,11 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-250.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.50MB/s(Youtube:不良林)
       - 🇰🇷 韩国-431.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-527.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 波兰-583.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-352.4KB/s(Youtube:不良林)
+      - 波兰-419.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-250.2KB/s(Youtube:不良林)
+      - 波兰-616.8KB/s(Youtube:不良林)
+      - 波兰-475.8KB/s(Youtube:不良林)
+      - 波兰-414.3KB/s(Youtube:不良林)
+      - 乌克兰-881.4KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.57MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
