--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 波兰-515.8KB/s(Youtube:不良林), server: 217.30.10.63, port: 9024, type: ss, cipher: aes-256-cfb, password: BejrQvtu9sqUeNuZ}
-  - {name: 🇺🇸 美国-2.09MB/s(Youtube:不良林), server: 34.217.102.91, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 波兰-583.6KB/s(Youtube:不良林), server: 217.30.10.63, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
-  - {name: 波兰-616.8KB/s(Youtube:不良林), server: 217.30.10.63, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
+  - {name: 🇺🇸 美国-545.1KB/s(Youtube:不良林), server: 20.24.227.29, port: 8313, type: ss, cipher: chacha20-ietf-poly1305, password: ljqdalu13..}
+  - {name: 波兰-202.5KB/s(Youtube:不良林), server: 217.30.10.64, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇨🇳 中国-804.8KB/s(Youtube:不良林), server: gz.bgp.rx.naiun.pw, port: 45183, type: ss, cipher: chacha20-ietf-poly1305, password: 8b460b5c-22cc-463b-b50a-44cf63bdca08}
   - {name: 波兰-475.8KB/s(Youtube:不良林), server: 217.30.10.63, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
-  - {name: 乌克兰-881.4KB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
-  - {name: 🇰🇷 韩国-2.57MB/s(Youtube:不良林), server: 3.36.93.113, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 波兰-669.5KB/s(Youtube:不良林), server: 217.30.10.64, port: 9037, type: ss, cipher: aes-256-cfb, password: TN2YqghxeFDKZfLU}
-  - {name: 🇭🇰 香港-1.33MB/s(Youtube:不良林), server: 511hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 511hk.fans8.xyz}}
-  - {name: 🇭🇰 香港-2.41MB/s(Youtube:不良林), server: 426hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 426hk.fans8.xyz}}
+  - {name: 波兰-258.5KB/s(Youtube:不良林), server: 217.30.10.63, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
+  - {name: 🇨🇳 中国-9.95MB/s(Youtube:不良林), server: hz.bgp.rx.naiun.pw, port: 45183, type: ss, cipher: chacha20-ietf-poly1305, password: 8b460b5c-22cc-463b-b50a-44cf63bdca08}
+  - {name: 🇨🇳 中国-11.26MB/s(Youtube:不良林), server: hz.bgp.rx.naiun.pw, port: 45250, type: vmess, uuid: 8b460b5c-22cc-463b-b50a-44cf63bdca08, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: hz.bgp.rx.naiun.pw}}
+  - {name: 🇨🇳 中国-10.65MB/s(Youtube:不良林), server: hz.bgp.rx.naiun.pw, port: 45184, type: vmess, uuid: 8b460b5c-22cc-463b-b50a-44cf63bdca08, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: hz.bgp.rx.naiun.pw}}
+  - {name: 🇨🇳 中国-1.99MB/s(Youtube:不良林), server: hz.bgp.rx.naiun.pw, port: 45413, type: vmess, uuid: 8b460b5c-22cc-463b-b50a-44cf63bdca08, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: hz.bgp.rx.naiun.pw}}
+  - {name: 🇨🇳 中国-3.43MB/s(Youtube:不良林), server: hz.bgp.rx.naiun.pw, port: 45394, type: vmess, uuid: 8b460b5c-22cc-463b-b50a-44cf63bdca08, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: hz.bgp.rx.naiun.pw}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 波兰-515.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 波兰-583.6KB/s(Youtube:不良林)
-      - 波兰-616.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-545.1KB/s(Youtube:不良林)
+      - 波兰-202.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-804.8KB/s(Youtube:不良林)
       - 波兰-475.8KB/s(Youtube:不良林)
-      - 乌克兰-881.4KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.57MB/s(Youtube:不良林)
-      - 波兰-669.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.33MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.41MB/s(Youtube:不良林)
+      - 波兰-258.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 波兰-515.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 波兰-583.6KB/s(Youtube:不良林)
-      - 波兰-616.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-545.1KB/s(Youtube:不良林)
+      - 波兰-202.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-804.8KB/s(Youtube:不良林)
       - 波兰-475.8KB/s(Youtube:不良林)
-      - 乌克兰-881.4KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.57MB/s(Youtube:不良林)
-      - 波兰-669.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.33MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.41MB/s(Youtube:不良林)
+      - 波兰-258.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 波兰-515.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 波兰-583.6KB/s(Youtube:不良林)
-      - 波兰-616.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-545.1KB/s(Youtube:不良林)
+      - 波兰-202.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-804.8KB/s(Youtube:不良林)
       - 波兰-475.8KB/s(Youtube:不良林)
-      - 乌克兰-881.4KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.57MB/s(Youtube:不良林)
-      - 波兰-669.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.33MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.41MB/s(Youtube:不良林)
+      - 波兰-258.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.33MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.41MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 波兰-515.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 波兰-583.6KB/s(Youtube:不良林)
-      - 波兰-616.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-545.1KB/s(Youtube:不良林)
+      - 波兰-202.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-804.8KB/s(Youtube:不良林)
       - 波兰-475.8KB/s(Youtube:不良林)
-      - 乌克兰-881.4KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.57MB/s(Youtube:不良林)
-      - 波兰-669.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.33MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.41MB/s(Youtube:不良林)
+      - 波兰-258.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 波兰-515.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 波兰-583.6KB/s(Youtube:不良林)
-      - 波兰-616.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-545.1KB/s(Youtube:不良林)
+      - 波兰-202.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-804.8KB/s(Youtube:不良林)
       - 波兰-475.8KB/s(Youtube:不良林)
-      - 乌克兰-881.4KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.57MB/s(Youtube:不良林)
-      - 波兰-669.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.33MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.41MB/s(Youtube:不良林)
+      - 波兰-258.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 波兰-515.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 波兰-583.6KB/s(Youtube:不良林)
-      - 波兰-616.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-545.1KB/s(Youtube:不良林)
+      - 波兰-202.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-804.8KB/s(Youtube:不良林)
       - 波兰-475.8KB/s(Youtube:不良林)
-      - 乌克兰-881.4KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.57MB/s(Youtube:不良林)
-      - 波兰-669.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.33MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.41MB/s(Youtube:不良林)
+      - 波兰-258.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 波兰-515.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 波兰-583.6KB/s(Youtube:不良林)
-      - 波兰-616.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-545.1KB/s(Youtube:不良林)
+      - 波兰-202.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-804.8KB/s(Youtube:不良林)
       - 波兰-475.8KB/s(Youtube:不良林)
-      - 乌克兰-881.4KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.57MB/s(Youtube:不良林)
-      - 波兰-669.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.33MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.41MB/s(Youtube:不良林)
+      - 波兰-258.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
