--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-545.1KB/s(Youtube:不良林), server: 20.24.227.29, port: 8313, type: ss, cipher: chacha20-ietf-poly1305, password: ljqdalu13..}
-  - {name: 波兰-202.5KB/s(Youtube:不良林), server: 217.30.10.64, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇨🇳 中国-8.72MB/s(Youtube:不良林), server: hz.bgp.rx.naiun.pw, port: 45240, type: ss, cipher: chacha20-ietf-poly1305, password: 8b460b5c-22cc-463b-b50a-44cf63bdca08}
+  - {name: 🇨🇳 中国-839.5KB/s(Youtube:不良林), server: gz.bgp.rx.naiun.pw, port: 45413, type: vmess, uuid: 8b460b5c-22cc-463b-b50a-44cf63bdca08, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: gz.bgp.rx.naiun.pw}}
   - {name: 🇨🇳 中国-804.8KB/s(Youtube:不良林), server: gz.bgp.rx.naiun.pw, port: 45183, type: ss, cipher: chacha20-ietf-poly1305, password: 8b460b5c-22cc-463b-b50a-44cf63bdca08}
-  - {name: 波兰-475.8KB/s(Youtube:不良林), server: 217.30.10.63, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
-  - {name: 波兰-258.5KB/s(Youtube:不良林), server: 217.30.10.63, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
+  - {name: 🇯🇵 日本-2.25MB/s(Youtube:不良林), server: 52.253.119.192, port: 8313, type: ss, cipher: chacha20-ietf-poly1305, password: ljqdalu13..}
+  - {name: 波兰-199.7KB/s(Youtube:不良林), server: 217.30.10.63, port: 9024, type: ss, cipher: aes-256-cfb, password: BejrQvtu9sqUeNuZ}
   - {name: 🇨🇳 中国-9.95MB/s(Youtube:不良林), server: hz.bgp.rx.naiun.pw, port: 45183, type: ss, cipher: chacha20-ietf-poly1305, password: 8b460b5c-22cc-463b-b50a-44cf63bdca08}
   - {name: 🇨🇳 中国-11.26MB/s(Youtube:不良林), server: hz.bgp.rx.naiun.pw, port: 45250, type: vmess, uuid: 8b460b5c-22cc-463b-b50a-44cf63bdca08, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: hz.bgp.rx.naiun.pw}}
   - {name: 🇨🇳 中国-10.65MB/s(Youtube:不良林), server: hz.bgp.rx.naiun.pw, port: 45184, type: vmess, uuid: 8b460b5c-22cc-463b-b50a-44cf63bdca08, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: hz.bgp.rx.naiun.pw}}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-545.1KB/s(Youtube:不良林)
-      - 波兰-202.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-839.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-804.8KB/s(Youtube:不良林)
-      - 波兰-475.8KB/s(Youtube:不良林)
-      - 波兰-258.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.25MB/s(Youtube:不良林)
+      - 波兰-199.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-9.95MB/s(Youtube:不良林)
       - 🇨🇳 中国-11.26MB/s(Youtube:不良林)
       - 🇨🇳 中国-10.65MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-545.1KB/s(Youtube:不良林)
-      - 波兰-202.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-839.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-804.8KB/s(Youtube:不良林)
-      - 波兰-475.8KB/s(Youtube:不良林)
-      - 波兰-258.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.25MB/s(Youtube:不良林)
+      - 波兰-199.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-9.95MB/s(Youtube:不良林)
       - 🇨🇳 中国-11.26MB/s(Youtube:不良林)
       - 🇨🇳 中国-10.65MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-545.1KB/s(Youtube:不良林)
-      - 波兰-202.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-839.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-804.8KB/s(Youtube:不良林)
-      - 波兰-475.8KB/s(Youtube:不良林)
-      - 波兰-258.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.25MB/s(Youtube:不良林)
+      - 波兰-199.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-9.95MB/s(Youtube:不良林)
       - 🇨🇳 中国-11.26MB/s(Youtube:不良林)
       - 🇨🇳 中国-10.65MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-545.1KB/s(Youtube:不良林)
-      - 波兰-202.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-839.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-804.8KB/s(Youtube:不良林)
-      - 波兰-475.8KB/s(Youtube:不良林)
-      - 波兰-258.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.25MB/s(Youtube:不良林)
+      - 波兰-199.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-9.95MB/s(Youtube:不良林)
       - 🇨🇳 中国-11.26MB/s(Youtube:不良林)
       - 🇨🇳 中国-10.65MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-545.1KB/s(Youtube:不良林)
-      - 波兰-202.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-839.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-804.8KB/s(Youtube:不良林)
-      - 波兰-475.8KB/s(Youtube:不良林)
-      - 波兰-258.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.25MB/s(Youtube:不良林)
+      - 波兰-199.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-9.95MB/s(Youtube:不良林)
       - 🇨🇳 中国-11.26MB/s(Youtube:不良林)
       - 🇨🇳 中国-10.65MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-545.1KB/s(Youtube:不良林)
-      - 波兰-202.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-839.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-804.8KB/s(Youtube:不良林)
-      - 波兰-475.8KB/s(Youtube:不良林)
-      - 波兰-258.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.25MB/s(Youtube:不良林)
+      - 波兰-199.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-9.95MB/s(Youtube:不良林)
       - 🇨🇳 中国-11.26MB/s(Youtube:不良林)
       - 🇨🇳 中国-10.65MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-545.1KB/s(Youtube:不良林)
-      - 波兰-202.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-839.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-804.8KB/s(Youtube:不良林)
-      - 波兰-475.8KB/s(Youtube:不良林)
-      - 波兰-258.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.25MB/s(Youtube:不良林)
+      - 波兰-199.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-9.95MB/s(Youtube:不良林)
       - 🇨🇳 中国-11.26MB/s(Youtube:不良林)
       - 🇨🇳 中国-10.65MB/s(Youtube:不良林)
